--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ author:
   employer         :
   pubmed           : 
   googlescholar    : "https://scholar.google.com/citations?user=bK_d01YAAAAJ&hl=zh-CN"
-  email            : "jiangjf@xs.ustb.edu.cn.com"
+  email            : "jiangjf@xs.ustb.edu.cn"
   researchgate     :  # e.g., "https://www.researchgate.net/profile/yourprofile"
   uri              :
   bitbucket        :
