--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 title                    : "Jianfei Jiang"
-description              : "PhD Candidate focous on 3D Reconstruction. "
+description              : "PhD student focous on 3D Reconstruction. "
 repository               : "JianfeiJ/JianfeiJ.github.io"
 google_scholar_stats_use_cdn : false
 
